@@ -407,7 +407,7 @@ public class HTable {
    * Get all the data for the specified row at the latest timestamp
    * 
    * @param row row key
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row) throws IOException {
@@ -418,7 +418,7 @@ public class HTable {
    * Get all the data for the specified row at the latest timestamp
    * 
    * @param row row key
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte [] row) throws IOException {
@@ -430,7 +430,7 @@ public class HTable {
    * 
    * @param row row key
    * @param numVersions number of versions to return
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row, final int numVersions)
@@ -444,7 +444,7 @@ public class HTable {
    * 
    * @param row row key
    * @param numVersions number of versions to return
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte[] row, final int numVersions)
@@ -457,7 +457,7 @@ public class HTable {
    * 
    * @param row row key
    * @param ts timestamp
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row, final long ts) 
@@ -470,7 +470,7 @@ public class HTable {
    * 
    * @param row row key
    * @param ts timestamp
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte [] row, final long ts) 
@@ -490,7 +490,7 @@ public class HTable {
    * @param row row key
    * @param timestamp timestamp
    * @param numVersions number of versions to return
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte[] row, final long timestamp,
@@ -503,7 +503,7 @@ public class HTable {
    * 
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row, final String [] columns) 
@@ -516,7 +516,7 @@ public class HTable {
    * 
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte [] row, final byte [][] columns) 
@@ -530,7 +530,7 @@ public class HTable {
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
    * @param numVersions number of versions to return
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row, final String[] columns,
@@ -545,7 +545,7 @@ public class HTable {
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
    * @param numVersions number of versions to return
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte[] row, final byte[][] columns,
@@ -559,7 +559,7 @@ public class HTable {
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
    * @param ts timestamp
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final String row, final String [] columns, 
@@ -574,7 +574,7 @@ public class HTable {
    * @param row row key
    * @param columns Array of column names and families you want to retrieve.
    * @param ts timestamp
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte [] row, final byte [][] columns, 
@@ -599,7 +599,7 @@ public class HTable {
    * @param columns Array of column names and families you want to retrieve.
    * @param ts timestamp
    * @param rl row lock
-   * @return RowResult is empty if row does not exist.
+   * @return RowResult is <code>null</code> if row does not exist.
    * @throws IOException
    */
   public RowResult getRow(final byte [] row, final byte [][] columns, 
