@@ -6,6 +6,8 @@ Release 0.19.2 - Unreleased
                (Ken Weiner via Stack)
    HBASE-1202  getRow does not always work when specifying number of versions
    HBASE-1319  Bug in atomicIncrement 0.19.1 only (Ryan Rawson via Stack)
+   HBASE-1301  HTable.getRow() returns null if the row does no exist
+               (Rong-en Fan via Stack)
 
 Release 0.19.1 - 03/19/2009
   BUG FIXES
